--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,12 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^1.3.5",
     "papaparse": "^5.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.5.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
